# errOr

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
LibError/: CMakeLists.txt
LibError/include/LibError/: ErrorOr.hpp
LibError/include/LibError/types/: TraceError.hpp
LibError/include/liberror/: CMakeLists.txt  ErrorOr.hpp  Maybe.hpp  Must.hpp  Try.hpp
LibError/include/liberror/types/: CMakeLists.txt  DefaultError.hpp  TraceError.hpp
LibError/source/: CMakeLists.txt  LibError.cppm  Stl.cppm
LibError/source/types/: CMakeLists.txt  StandardError.cppm  TraceError.cppm  Types.cppm
cmake/: LibErrorConfig.cmake  enable_tests.cmake  errOrConfig.cmake  err_orConfig.cmake
errOr/: CMakeLists.txt
errOr/include/errOr/: CMakeLists.txt  ErrorOr.hpp
errOr/include/errOr/policies/: CMakeLists.txt  DefaultError.hpp  TraceableError.hpp
err_or/: CMakeLists.txt
err_or/include/err_or/: CMakeLists.txt  ErrorOr.hpp
err_or/include/err_or/types/: CMakeLists.txt  DefaultError.hpp  TraceError.hpp
tests/: CMakeLists.txt
tests/compiletime/: CMakeLists.txt  compiletime.cpp
tests/example/: CMakeLists.txt
tests/initialization/: CMakeLists.txt  initialization.cpp
tests/runtime/: CMakeLists.txt  runtime.cpp
